fixed height spacing problems for My buddies column

--- a/server/buddy-system/views/startbootstrap-sb-admin-2-1.0.8/pages/style.css
+++ b/server/buddy-system/views/startbootstrap-sb-admin-2-1.0.8/pages/style.css
@@ -23,3 +23,7 @@ body {
 .navbar {
     height: 70px;
 }
+
+.list-group-item {
+    height: 102px;
+}
